--- a/ex3/src/main/resources/templates/sample/ex2.html
+++ b/ex3/src/main/resources/templates/sample/ex2.html
@@ -34,5 +34,11 @@
     <ul>
         <li th:each="dto, state : ${list}" th:class="${dto.sno % 5 == 0}?'target'" th:text="${dto}"></li>
     </ul>
+
+    <ul>
+        <th:block th:each="dto: ${list}">
+            <li th:text="${dto.sno % 5 == 0}?${dto.sno}:${dto.first}"></li>
+        </th:block>
+    </ul>
 </body>
 </html>
